Fix alignment issue with some ranks

--- a/nova/resources/assets/sass/app.scss
+++ b/nova/resources/assets/sass/app.scss
@@ -189,7 +189,7 @@ label.custom-control {
 		width: 144px;
 
 		background-color: transparent;
-		background-position: top left;
+		background-position: center left;
 		background-repeat: no-repeat;
 	}
 
